<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btn_end"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/end"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".25"
        android:text="Игрок 1"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/tv_turn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_player_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Ваш ход"
        android:textSize="24sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_truth"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/truth"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/tv_turn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dare"
        android:layout_marginTop="200dp" />

    <Button
        android:id="@+id/btn_dare"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/dare"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/tv_turn"
        app:layout_constraintStart_toEndOf="@id/btn_truth"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp" />

    <Button
        android:id="@+id/btn_random"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/random"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/btn_dare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>