<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_mode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/choose_game_mode"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/fl_lite_mode"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tv_mode_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:fontFamily="sans-serif"
            android:text="@string/lite_mode"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_hard_mode"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/fl_lite_mode">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:fontFamily="sans-serif"
            android:text="@string/hard_mode"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_add_to_lm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fl_lite_mode"
        app:layout_constraintEnd_toEndOf="@id/fl_lite_mode" />

    <Button
        android:id="@+id/btn_add_to_hm"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fl_hard_mode"
        app:layout_constraintEnd_toEndOf="@id/fl_hard_mode" />

</androidx.constraintlayout.widget.ConstraintLayout>